--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "puppeteer": "^14.1.1"
+    "puppeteer": "^14.1.1",
+    "puppeteer-video-recorder": "^1.0.5"
   }
 }
