--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "colors": "^1.4.0",
     "ffcreator": "^6.6.9",
     "ffcreatorlite": "^2.3.8",
+    "gm": "^1.23.1",
     "keypress": "^0.2.1",
+    "nodejieba": "^2.6.0",
     "puppeteer": "^14.1.1",
-    "puppeteer-video-recorder": "^1.0.5"
+    "puppeteer-video-recorder": "^1.0.5",
+    "word-wrap": "^1.2.3",
+    "word-wrapper": "^1.0.7",
+    "word-wrappr": "^1.0.8",
+    "wordwrap": "^1.0.0"
   }
 }
