--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "node_spider",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
     "ffcreator": "^6.6.9",
     "ffcreatorlite": "^2.3.8",
     "gm": "^1.23.1",
-    "keypress": "^0.2.1",
-    "nodejieba": "^2.6.0",
     "puppeteer": "^14.1.1",
     "puppeteer-video-recorder": "^1.0.5",
-    "word-wrap": "^1.2.3",
-    "word-wrapper": "^1.0.7",
-    "word-wrappr": "^1.0.8",
-    "wordwrap": "^1.0.0"
+    "word-wrappr": "^1.0.8"
   }
 }
