--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "ffcreator": "^6.6.9",
     "ffcreatorlite": "^2.3.8",
     "gm": "^1.23.1",
-    "puppeteer": "^14.1.1",
-    "puppeteer-video-recorder": "^1.0.5",
+    "nodejieba": "^2.6.0",
+    "puppeteer": "14.1.0",
     "word-wrappr": "^1.0.8"
   }
 }
